...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <us.bridgeses.slidedatetimepicker.SlidingTabLayout
        android:id="@+id/slidingTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <us.bridgeses.slidedatetimepicker.CustomViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!--
        The horizontal separator that runs across the top of
...
