<?xml version="1.0" encoding="utf-8"?>

<us.bridgeses.slidedatetimepicker.CustomTimePicker
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timePicker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />