<?xml version="1.0" encoding="utf-8"?>

<us.bridgeses.slidedatetimepicker.CustomDatePicker
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/datePicker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:calendarViewShown="false" />